8-7-20:
- Added validation for timer entry
- Disable entries when timer is non-stopped
8-8-20:
- Added stopwatch module and functionality
- Added module for settings (colors and fonts)
- Added module for locals (contains constants such as RUNNING, PAUSED, STOPPED)
- Renamed productivitytimer.py to timer.py
- Fixed timer app functionality
- Timer app now pauses when cancel prompt open
- Added titles to stopwatch and timer windows
- Added sound effect to timer
8-9-20:
- Fixed typo in check_for_weed easter egg method
- Added sixty_nine_test easter egg method
- Fixed bug where after entering in 420 or 69, then running the timer normally, the the sound upon the timers rundown would be the previously activated easter_egg sound rather than the ding. I did this by creating two new modes called WEED and SIXTY_NINE. I then created a new method to select and load the correct mp3 file based on the mode.
- Made above changes shorter; removed new methods and constants from locals.py
8-10-20:
- Implemented Pomodoro functionality
- Created Pomo settings in settings module
8-11-20:
- Created main menu
- Refactored Timer, Stopwatch, and Pomo -> all classes inherit from Frame instead of Tk in order for the app to easily switch between modes
- Created TimerApp module/class. This is the base of the application
- Created a working back button for all three timers