@@ -23,3 +23,4 @@
 - Refactored Timer, Stopwatch, and Pomo -> all classes inherit from Frame instead of Tk in order for the app to easily switch between modes
 - Created TimerApp module/class. This is the base of the application
 - Created a working back button for all three timers
+- Changed how TimerApp shows frames (changed key frames dict to string representation of Frame name instead of frame class as object; now don't have to import modules to use show frames)
